--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <div id="audioWidget">
     <span id="closeWidget" onclick="hidePlayer()">✖</span>
     <audio controls>
-      <source src="Stream%20of%20Science.wav" type="audio/wav">
+      <source src="Stream of Science.wav" type="audio/wav">
       Your browser does not support the audio element.
     </audio>
   </div>
