--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
     #audioWidget {
       position: fixed;
-      bottom: 20px;
-      right: 20px;
+      top: 20px;
+      left: 20px;
       background: white;
       padding: 12px;
       border: 1px solid #ccc;
       border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
       z-index: 999;
       max-width: 90%;
     }
@@ -40,9 +40,9 @@
 
     @media (max-width: 600px) {
       #audioWidget {
+        top: 10px;
         left: 10px;
         right: 10px;
-        bottom: 10px;
         padding: 10px;
       }
     }
